add login procedure
