# pkg/api/dto/auth.go
@@ -4,3 +4,6 @@ type UserDto struct {
 	Mobile   string `json:"mobile" binding:"required,min=11"`
 	Password string `json:"password" binding:"required,min=3,max=72"`
 }
+type SuccessAuthResponse struct {
+	Token string `json:"token"`
+}
